--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="accent_color">#FF4081</color>
+
+
+    <color name="colorPrimary">#535763</color>
+    <color name="colorPrimaryDark">#1A1C23</color>
+    <color name="background">#464953</color>
+    <color name="text_color">#FFFFFF</color>
+    <color name="count_color">#BEBEBE</color>
 </resources>
