--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,24 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your theme here. -->
+        <item name="background">@color/background</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/accent_color</item>
+
     </style>
 
+
+    <style name="AppCompatAlertDialogStyleDark" parent="Theme.AppCompat.Dialog.Alert">
+        <item name="colorAccent">@color/accent_color</item>
+        <item name="android:background">@color/background</item>
+        <item name="android:textViewStyle">@style/TextViewStyle.Dark</item>
+    </style>
+
+
+    <style name="TextViewStyle.Dark" parent="android:Widget.TextView">
+        <item name="android:textColor">@color/text_color</item>
+    </style>
 </resources>
