--- a/app/src/main/res/layout/login_box.xml
+++ b/app/src/main/res/layout/login_box.xml
@@ -8,6 +8,8 @@
         android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:inputType="textEmailAddress"
         android:hint="username@purdue.edu"/>
 
@@ -15,6 +17,8 @@
         android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:inputType="textPassword"
         android:hint="Password"
         />
