--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,6 +5,11 @@
     <item
         android:id="@+id/action_settings"
         android:title="Settings"
+        android:orderInCategory="200"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_logout"
+        android:title="Logout"
         android:orderInCategory="100"
         app:showAsAction="never" />
     <item
