--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="accent_color">#FF4081</color>
+    <color name="accent_color">#1DE9B6</color>
 
 
     <color name="colorPrimary">#535763</color>
