--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:text="@string/app_name"
+            android:textAllCaps="true"
             android:id="@+id/toolbar_title" />
     </android.support.v7.widget.Toolbar>
 
