--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -17,5 +17,12 @@
         android:title="Filter rooms"
         app:showAsAction="always"
         android:icon="@drawable/ic_filter_list_white_24dp"
+        android:orderInCategory="200"/>
+
+    <item
+        android:id="@+id/action_user_settings"
+        android:title="User settings"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_person_white_24dp"
         android:orderInCategory="100"/>
 </menu>
