--- a/app/src/main/res/xml/userpreferences.xml
+++ b/app/src/main/res/xml/userpreferences.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-                  android:windowBackground="?attr/background">
+                  android:windowBackground="?attr/background"
+                    android:title="screen"
+                    android:key="screen"
+    >
     <SwitchPreference
         android:key="pref_broadcast"
         android:title="@string/broadcast_setting"
         android:defaultValue="false"
-        android:summary="@string/broadcast_summary"
+        android:summary="Choose if you wish to broadcast your location"
         ></SwitchPreference>
     <EditTextPreference
         android:key="pref_status"
         android:title="@string/status_setting"
-        android:summary="@string/status_summary"
+        android:summary="Set if you are willing to help or need help"
         android:defaultValue="Yes"
         ></EditTextPreference>
     <MultiSelectListPreference
