--- a/app/src/main/res/layout/activity_view_lab.xml
+++ b/app/src/main/res/layout/activity_view_lab.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:fab="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
@@ -25,44 +26,54 @@
             android:textAllCaps="true"
             android:id="@+id/toolbar_title" />
     </android.support.v7.widget.Toolbar>
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="10dp"
-        android:text="Webcam"
-        android:id="@+id/webcamLink"
-        android:clickable="true"
-        android:textSize="15sp"
-        android:layout_below="@id/toolbar"
-        android:gravity="center_horizontal|center_vertical"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:text="Schedule"
-        android:id="@+id/calendarLink"
-        android:clickable="true"
-        android:textSize="15sp"
-        android:layout_below="@id/toolbar"
-        android:layout_toRightOf="@id/webcamLink"
-        android:gravity="center_horizontal|center_vertical"/>
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/toolbar"
-        android:layout_marginTop="34dp"
+        android:layout_marginTop="20dp"
         android:layout_marginLeft="25dp"
-        android:layout_toRightOf="@id/calendarLink"
+        android:layout_centerHorizontal="true"
         android:textSize="16sp"
-        android:textAllCaps="true"
         android:id="@+id/capacity"
         android:text="15/20 Computers"/>
 
+    <com.getbase.floatingactionbutton.FloatingActionsMenu
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        fab:fab_addButtonColorNormal="@color/accent_color"
+        fab:fab_addButtonColorPressed="@color/accent_color"
+        android:layout_gravity="bottom|right"
+        fab:fab_expandDirection="up"
+        fab:fab_labelStyle="@style/menu_labels_style"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp">
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_calendar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_colorNormal="@color/accent_color"
+            fab:fab_colorPressed="@color/accent_color"
+            fab:fab_title="Calendar"
+            fab:fab_icon="@drawable/ic_date_range_white_24dp"
+            fab:fab_size="mini"/>
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_webcam"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_colorNormal="@color/accent_color"
+            fab:fab_colorPressed="@color/accent_color"
+            fab:fab_size="mini"
+            fab:fab_icon="@drawable/ic_videocam_white_24dp"
+            fab:fab_title="Webcam"/>
+
+
+    </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
 </RelativeLayout>
