--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="background">#464953</color>
     <color name="text_color">#FFFFFF</color>
     <color name="count_color">#BEBEBE</color>
+    <color name="black_semi_transparent">#B2000000</color>
 </resources>
