--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -14,21 +14,26 @@
         app:showAsAction="never" />
     <item
         android:id="@+id/action_search"
-        android:title="class search"
+        android:title="Class Search"
         android:orderInCategory="300"
         app:showAsAction="never"
         />
     <item
-        android:id="@+id/action_filter"
-        android:title="Filter rooms"
-        app:showAsAction="always"
-        android:icon="@drawable/ic_filter_list_white_24dp"
-        android:orderInCategory="200"/>
-
-    <item
         android:id="@+id/action_user_preferences"
         android:title="User settings"
         app:showAsAction="always"
-        android:icon="@drawable/ic_person_white_24dp"
-        android:orderInCategory="100"/>
+        android:icon="@drawable/ic_person_white_24dp"/>
+    <item
+        android:id="@+id/action_filter"
+        android:title="Filter rooms"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_filter_list_white_24dp"/>
+
+    <item
+        android:id="@+id/action_refresh"
+        android:title="Refresh capacities"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_refresh_white_24dp"/>
+
+
 </menu>
