--- a/app/src/main/res/layout/activity_view_lab_fragment.xml
+++ b/app/src/main/res/layout/activity_view_lab_fragment.xml
@@ -101,6 +101,15 @@
             fab:fab_size="mini"
             fab:fab_icon="@drawable/ic_videocam_white_24dp"
             fab:fab_title="Webcam"/>
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_usage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_colorNormal="@color/accent_color"
+            fab:fab_colorPressed="@color/accent_color"
+            fab:fab_size="mini"
+            fab:fab_icon="@drawable/ic_insert_chart_white_24dp"
+            fab:fab_title="Lab Usage By Hour"/>
 
 
     </com.getbase.floatingactionbutton.FloatingActionsMenu>
