--- a/app/src/main/res/layout/recycler_view_main.xml
+++ b/app/src/main/res/layout/recycler_view_main.xml
@@ -11,8 +11,8 @@
         android:paddingLeft="16dp"
         android:paddingTop="32dp"
         android:paddingBottom="10dp"
-        android:id="@+id/building"
-        android:src="@drawable/ic_domain_white_24dp"
+        android:id="@+id/computer"
+        android:src="@drawable/ic_computer_white_24dp"
         />
     <TextView
         android:id="@+id/room"
