--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,31 +3,26 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_settings"
-        android:title="Settings"
-        android:orderInCategory="200"
-        app:showAsAction="never" />
-    <item
         android:id="@+id/action_logout"
         android:title="Logout"
         android:orderInCategory="100"
         app:showAsAction="never" />
-    <item
+<!--    <item
         android:id="@+id/action_search"
         android:title="Class Search"
         android:orderInCategory="300"
         app:showAsAction="never"
-        />
+        />-->
     <item
         android:id="@+id/action_user_preferences"
-        android:title="User settings"
+        android:title="User preferences"
         app:showAsAction="always"
         android:icon="@drawable/ic_person_white_24dp"/>
-    <item
+<!--    <item
         android:id="@+id/action_filter"
         android:title="Filter rooms"
         app:showAsAction="always"
-        android:icon="@drawable/ic_filter_list_white_24dp"/>
+        android:icon="@drawable/ic_filter_list_white_24dp"/>-->
 
     <item
         android:id="@+id/action_refresh"
